# n64recomp_libc

./: recomp_mips.ini
arch/mips/: meson.build
arch/mips/include/: _endian.h  _limits.h
arch/mips/include/_types/: _float.h
test/: meson.build
